crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT011_glob_prefix.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT011 `pytest.raises(pickle.PicklingError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:34:24
   |
34 |     with pytest.raises(PicklingError):
   |                        ^^^^^^^^^^^^^
   |

PT011 `pytest.raises(pickle.UnpicklingError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:37:24
   |
37 |     with pytest.raises(UnpicklingError):
   |                        ^^^^^^^^^^^^^^^
   |
