crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT014.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
 --> PT014.py:4:35
  |
4 | @pytest.mark.parametrize("x", [1, 1, 2])
  |                                   ^
5 | def test_error_literal(x):
6 |     ...
  |
help: Remove duplicate test case
  |
4 - @pytest.mark.parametrize("x", [1, 1, 2])
4 + @pytest.mark.parametrize("x", [1, 2])
  |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:14:35
   |
14 | @pytest.mark.parametrize("x", [a, a, b, b, b, c])
   |                                   ^
15 | def test_error_expr_simple(x):
16 |     ...
   |
help: Remove duplicate test case
   |
14 - @pytest.mark.parametrize("x", [a, a, b, b, b, c])
14 + @pytest.mark.parametrize("x", [a, b, b, b, c])
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 2 in `pytest.mark.parametrize`
  --> PT014.py:14:41
   |
14 | @pytest.mark.parametrize("x", [a, a, b, b, b, c])
   |                                         ^
15 | def test_error_expr_simple(x):
16 |     ...
   |
help: Remove duplicate test case
   |
14 - @pytest.mark.parametrize("x", [a, a, b, b, b, c])
14 + @pytest.mark.parametrize("x", [a, a, b, b, c])
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 2 in `pytest.mark.parametrize`
  --> PT014.py:14:44
   |
14 | @pytest.mark.parametrize("x", [a, a, b, b, b, c])
   |                                            ^
15 | def test_error_expr_simple(x):
16 |     ...
   |
help: Remove duplicate test case
   |
14 - @pytest.mark.parametrize("x", [a, a, b, b, b, c])
14 + @pytest.mark.parametrize("x", [a, a, b, b, c])
   |
note: This is an unsafe fix and may change runtime behavior

PT014 Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:24:9
   |
22 |         (a, b),
23 |         # comment
24 |         (a, b),
   |         ^^^^^^
25 |         (b, c),
26 |     ],
   |
help: Remove duplicate test case

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:32:39
   |
32 | @pytest.mark.parametrize("x", [a, b, (a), c, ((a))])
   |                                       ^
33 | def test_error_parentheses(x):
34 |     ...
   |
help: Remove duplicate test case
   |
32 - @pytest.mark.parametrize("x", [a, b, (a), c, ((a))])
32 + @pytest.mark.parametrize("x", [a, b, c, ((a))])
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:32:48
   |
32 | @pytest.mark.parametrize("x", [a, b, (a), c, ((a))])
   |                                                ^
33 | def test_error_parentheses(x):
34 |     ...
   |
help: Remove duplicate test case
   |
32 - @pytest.mark.parametrize("x", [a, b, (a), c, ((a))])
32 + @pytest.mark.parametrize("x", [a, b, (a), c])
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:42:10
   |
40 |         a,
41 |         b,
42 |         (a),
   |          ^
43 |         c,
44 |         ((a)),
   |
help: Remove duplicate test case
   |
41 -         b,
42 -         (a),
41 +         b,
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:44:11
   |
42 |         (a),
43 |         c,
44 |         ((a)),
   |           ^
45 |     ],
46 | )
   |
help: Remove duplicate test case
   |
43 -         c,
44 -         ((a)),
43 +         c,
   |
note: This is an unsafe fix and may change runtime behavior

PT014 [*] Duplicate of test case at index 0 in `pytest.mark.parametrize`
  --> PT014.py:56:53
   |
56 | @pytest.mark.parametrize('data, spec', [(1.0, 1.0), (1.0, 1.0)])
   |                                                     ^^^^^^^^^^
57 | def test_numbers(data, spec):
58 |     ...
   |
help: Remove duplicate test case
   |
56 - @pytest.mark.parametrize('data, spec', [(1.0, 1.0), (1.0, 1.0)])
56 + @pytest.mark.parametrize('data, spec', [(1.0, 1.0)])
   |
note: This is an unsafe fix and may change runtime behavior
