crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT016.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT016 No message passed to `pytest.fail()`
  --> PT016.py:19:5
   |
19 |     pytest.fail()
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:20:5
   |
20 |     pytest.fail("")
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:21:5
   |
21 |     pytest.fail(f"")
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:22:5
   |
22 |     pytest.fail(msg="")
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:23:5
   |
23 |     pytest.fail(msg=f"")
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:24:5
   |
24 |     pytest.fail(reason="")
   |     ^^^^^^^^^^^
   |

PT016 No message passed to `pytest.fail()`
  --> PT016.py:25:5
   |
25 |     pytest.fail(reason=f"")
   |     ^^^^^^^^^^^
   |
