crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT017.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT017 Found assertion on exception `e` in `except` block, use `pytest.raises()` instead
  --> PT017.py:19:9
   |
17 |         something()
18 |     except Exception as e:
19 |         assert e.message, "blah blah"
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

PT017 Found assertion on exception `e` in `except` block, use `pytest.raises()` instead
  --> PT017.py:26:9
   |
24 |         something()
25 |     except Exception as e:
26 |         assert len(e.args) == 1, e.args
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
