crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT019.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT019 Fixture `_fixture` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
 --> PT019.py:9:14
  |
9 | def test_xxx(_fixture):  # Error arg
  |              ^^^^^^^^
  |

PT019 Fixture `_fixture` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
  --> PT019.py:13:17
   |
13 | def test_xxx(*, _fixture):  # Error kwonly
   |                 ^^^^^^^^
   |

PT019 Fixture `_bar` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
  --> PT019.py:31:24
   |
31 | def test_thingy2(_foo, _bar):  # Error _bar is not defined in parametrize
   |                        ^^^^
   |

PT019 Fixture `_bar` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
  --> PT019.py:39:24
   |
39 | def test_thingy4(_foo, _bar):  # Error _bar is not defined in parametrize
   |                        ^^^^
   |
